syntax = "proto3";
package openhufu;

import "data.proto";
import "plan.proto";

option java_package = "com.hufudb.openhufu.proto";
option java_outer_classname = "OpenHuFuService";


message GeneralRequest {
  string value = 1;
}

message GeneralResponse {
  int32 status = 1;
  string msg = 2;
}

message OwnerInfo {
  int32 id = 1;
  string endpoint = 2;
}

service Service {
  rpc getOwnerInfo(GeneralRequest) returns (OwnerInfo);
  rpc AddOwner(OwnerInfo) returns (GeneralResponse);
  rpc GetTableSchema(GeneralRequest) returns (SchemaProto);
  rpc GetAllTableSchema(GeneralRequest) returns (TableSchemaListProto);
  rpc Query(QueryPlanProto) returns (stream DataSetProto);
}